// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress /> Progress with multiple props matches with snapshot 1`] = `
.c1 {
  max-width: 100%;
}

.c0.is-disabled .c3::after {
  background: #d8d8d8;
}

.c0.is-disabled .c4::after {
  background: #d8d8d8;
}

.c0.is-disabled .c5::after {
  background: #d8d8d8;
}

.c2 {
  position: relative;
  height: 0.125rem;
  background: #eee;
  height: 6px;
}

.c2::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  max-width: 50%;
  -webkit-transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  background: #19b4fa;
}

.c0.is-disabled .c2::after {
  background: #d8d8d8;
}

.k-Meters-Progress--orion .c2 {
  border-radius: 0.1875rem;
}

.k-Meters-Progress--orion .c2::after {
  border-radius: 0.1875rem;
}

<div
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={50}
  className="c0 c1 k-Meters-Progress k-Meters-Progress--andromeda"
  role="progressbar"
>
  <div
    className="c2 k-Meters-Progress__ramp"
  />
</div>
`;

exports[`<Progress /> simple Progress  matches with snapshot 1`] = `
.c1 {
  max-width: 100%;
}

.c2 {
  position: relative;
  height: 0.125rem;
  background: #eee;
}

.c2::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  max-width: 0%;
  -webkit-transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  background: #19b4fa;
}

.c0.is-disabled .c2::after {
  background: #d8d8d8;
}

.k-Meters-Progress--orion .c2 {
  border-radius: 0.1875rem;
}

.k-Meters-Progress--orion .c2::after {
  border-radius: 0.1875rem;
}

<div
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={0}
  className="c0 c1 k-Meters-Progress k-Meters-Progress--andromeda"
  role="progressbar"
>
  <div
    className="c2 k-Meters-Progress__ramp"
  />
</div>
`;
